# reflexio

./: CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.hypothesis/constants/: 182ee4e15f83b40d  1f46313b76d1c0d6  21bd71d488608bd5  4df96b748d253842  6435ca146b29e0c7  841e0ae1df2b2ca2  d543a28181ee3c1c
.hypothesis/examples/04e6b3400353b141/: c166b8991bbffaf7  d352350267400ce0
.hypothesis/examples/c166b8991bbffaf7/: 12e4751021c1c3fd  26d2ea6b4c55dd86  419e5fe3ef092853  95040a1b717bf59b  ef94a4c78a6857e6
.hypothesis/examples/d352350267400ce0/: 06a4a422837a0e5b
docs/: api.md  changelog.md  design_notes.md  getting-started.md  index.md  observability.md  recipes.md
docs/blog/: why-reflexio.md
docs/concepts/: error-classes.md  policies-decorators.md  strategies.md
docs/examples/: index.md
docs/snippets/: async_worker_retry.py  bench_retry.py  decorator_retry.py  httpx_async_retry.py  httpx_sync_retry.py  pyodbc_classifier.py  pyodbc_retry.py
src/reflexio/: policy.py
tests/: test_strategies.py
